html: added save and reset button for audio settings

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -87,7 +87,7 @@
                     <h3 class="card-title">Audio Settings</h3>
                     <div class="card-actions">
                       <a class="btn btn-icon" id="audioRefreshBtn" data-bs-toggle="tooltip" data-bs-placement="top"
-                        data-bs-original-title="Refresh Audio Device List">
+                        data-bs-original-title="Refresh Audio Device List" style="margin-right: 12px;">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-refresh" width="24"
                           height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
                           stroke-linecap="round" stroke-linejoin="round">
@@ -95,6 +95,31 @@
                           <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
                           <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
                         </svg>
+                      </a>
+                      <a class="btn" id="AudioSetting_Save" style="margin-right: 4px;" data-bs-toggle="tooltip"
+                        data-bs-placement="top"
+                        data-bs-original-title="Only saves volueme threshold and voice timeout.">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
+                          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                          stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M6 4h10l4 4v10a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2"></path>
+                          <path d="M12 14m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0"></path>
+                          <path d="M14 4l0 4l-6 0l0 -4"></path>
+                        </svg>
+                        Save
+                      </a>
+                      <a class="btn btn-outline-danger" id="AudioSetting_Reset">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
+                          stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
+                          stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                          <path d="M20 11a8.1 8.1 0 0 0 -15.5 -2m-.5 -4v4h4"></path>
+                          <path d="M4 13a8.1 8.1 0 0 0 15.5 2m.5 4v-4h-4"></path>
+                          <path d="M12 9l0 3"></path>
+                          <path d="M12 15l.01 0"></path>
+                        </svg>
+                        Reset
                       </a>
                     </div>
                   </div>
