feat: saving audio settings

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -561,6 +561,17 @@
           Can't retrieve deivce information from API.<br>This might be caused by an empty device list.
         </div>
       </div>
+      <div class="toast text-white bg-success border-0" role="alert" id="toast_audioSettingSaved" aria-live="assertive"
+        aria-atomic="true">
+        <div class="toast-header text-white bg-success border-0">
+          <strong class="me-auto">Saved!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          Audio settings saved!
+        </div>
+      </div>
     </div>
     <!-- Libs JS -->
     <!-- Tabler Core -->
