--- a/templates/empty.html
+++ b/templates/empty.html
@@ -572,6 +572,28 @@
           Audio settings saved!
         </div>
       </div>
+      <div class="toast text-white bg-success border-0" role="alert" id="toast_whisperSettingSaved"
+        aria-live="assertive" aria-atomic="true">
+        <div class="toast-header text-white bg-success border-0">
+          <strong class="me-auto">Saved!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          Whisper settings saved!
+        </div>
+      </div>
+      <div class="toast text-white bg-success border-0" role="alert" id="toast_subtitleSettingSaved"
+        aria-live="assertive" aria-atomic="true">
+        <div class="toast-header text-white bg-success border-0">
+          <strong class="me-auto">Saved!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          Subtitle settings saved!
+        </div>
+      </div>
     </div>
     <!-- Libs JS -->
     <!-- Tabler Core -->
