refactor: remove reset button
This is being put on backlog, check the repo's project for more information

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -109,7 +109,7 @@
                         </svg>
                         Save
                       </a>
-                      <a class="btn btn-outline-danger" id="AudioSetting_Reset">
+                      <!-- <a class="btn btn-outline-danger" id="AudioSetting_Reset">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                           stroke-linejoin="round">
@@ -120,7 +120,7 @@
                           <path d="M12 15l.01 0"></path>
                         </svg>
                         Reset
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                   <div class="card-body">
@@ -210,8 +210,7 @@
                         </svg>
                         Save
                       </a>
-                      <a class="btn btn-outline-danger" id="WhisperSettings_Reset">
-                        <!-- TODO: add danger modal -->
+                      <!-- <a class="btn btn-outline-danger" id="WhisperSettings_Reset">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                           stroke-linejoin="round">
@@ -222,7 +221,7 @@
                           <path d="M12 15l.01 0"></path>
                         </svg>
                         Reset
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                   <div class="card-body">
@@ -388,8 +387,7 @@
                         </svg>
                         Save
                       </a>
-                      <a class="btn btn-outline-danger" id="SubtitleSettings_Reset">
-                        <!-- TODO: add danger modal -->
+                      <!-- <a class="btn btn-outline-danger" id="SubtitleSettings_Reset">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                           stroke-linejoin="round">
@@ -400,7 +398,7 @@
                           <path d="M12 15l.01 0"></path>
                         </svg>
                         Reset
-                      </a>
+                      </a> -->
                     </div>
                   </div>
                   <div class="card-body">
