feat: subtitle websocket status dot
Looks ugly, but works surprisingly well.

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -375,6 +375,14 @@
                   <div class="card-status-top bg-teal"></div>
                   <div class="card-header">
                     <h3 class="card-title">Subtitle Settings</h3>
+                    <div id="SubtitleWebsocketStatus_Disconnected" style="margin-left: 2em; display: block;">
+                      <span class="badge bg-secondary me-1"></span>
+                      <label>Disconnected</label>
+                    </div>
+                    <div id="SubtitleWebsocketStatus_Connected" style="margin-left: 2em; display: none;">
+                      <span class="badge bg-success me-1"></span>
+                      <label>Connected</label>
+                    </div>
                     <div class="card-actions">
                       <a class="btn" id="SubtitleSettings_Save" style="margin-right: 4px;">
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
