--- a/templates/empty.html
+++ b/templates/empty.html
@@ -1,19 +1,11 @@
 <!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta19
-* @link https://tabler.io
-* Copyright 2018-2023 The Tabler Authors
-* Copyright 2018-2023 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
 <html lang="en">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Empty page - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
+  <title>WhisperLiveSubs - Control Panel</title>
   <!-- CSS files -->
   <link href="{{ url_for('static', filename='css/tabler.min.css') }}" rel="stylesheet" />
   <link href="{{ url_for('static', filename='css/coloris.min.css') }}" rel="stylesheet" />
@@ -31,14 +23,12 @@
       <header class="navbar navbar-expand-md d-print-none">
         <div class="container-xl">
           <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
-            <a href="." style="text-decoration: none;">Tabler</a>
+            <a href="." style="text-decoration: none;">WhisperLiveSubs</a>
           </h1>
           <div class="navbar-nav flex-row order-md-last">
             <div class="d-none d-md-flex">
-              <a class="nav-link px-0">test</a>
               <a id="darkModeSwitch" class="nav-link px-0 hide-theme-dark" title="Enable dark mode"
                 data-bs-toggle="tooltip" data-bs-placement="bottom">
-                <!-- Replace this with the "Switch Icon". Probably could click -> save to config -> prompt to / automatic reload? -->
                 <!-- Download SVG icon from http://tabler-icons.io/i/moon -->
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                   stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -199,7 +189,6 @@
                     <div class="card-actions">
                       <a class="btn btn-primary" id="startBtn" style="margin-right: 12px;">Start Whisper</a>
                       <a class="btn" id="WhisperSettings_Save" style="margin-right: 4px;">
-                        <!-- TODO: implement function on js, popup notification on sucess/failure -->
                         <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                           stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                           stroke-linejoin="round">
@@ -225,7 +214,6 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <!-- TODO: whisper model size, language, task, start whisper button, maybe the iframe? with the color settings? -->
                     <div class="container">
                       <div class="row align-items-center">
                         <div class="col">
@@ -410,7 +398,6 @@
                     </div>
                   </div>
                   <div class="card-body">
-                    <!-- TODO: fill this in: stroke-color, stroke-width, text-color, font-family, font-size, font-weight -->
                     <div class="container">
                       <div class="row align-items-center">
                         <div class="col">
@@ -517,13 +504,25 @@
               <div class="col-12 col-lg-auto mt-3 mt-lg-0">
                 <ul class="list-inline list-inline-dots mb-0">
                   <li class="list-inline-item">
-                    Copyright &copy; 2023
-                    <a href="." class="link-secondary">Tabler</a>.
-                    All rights reserved.
+                    <label>WhisperLiveSubs</label>
+                    <a href="https://github.com/mashiro-azure/WhisperLiveSubs" target="_blank">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github"
+                        width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path
+                          d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                      </svg>
+                    </a>
                   </li>
                   <li class="list-inline-item">
-                    <a href="./changelog.html" class="link-secondary" rel="noopener">
-                      v1.0.0-beta19
+                    <label>
+                      v1.0.0-rc
+                    </label>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="#" class="link-secondary" data-bs-toggle="modal" data-bs-target="#licenseModal">
+                      License
                     </a>
                   </li>
                 </ul>
@@ -531,6 +530,33 @@
             </div>
           </div>
         </footer>
+      </div>
+    </div>
+    <!-- License modal -->
+    <div class="modal modal-blur fade" id="licenseModal" tabindex="-1">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">License</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            WhisperLiveSubs is made with the following libraries / packages. Thank you so much for creating such amazing
+            software.
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><a href="https://github.com/tabler/tabler" target="_blank">Tabler - MIT
+                  License</a></li>
+              <li class="list-group-item"><a href="https://github.com/tabler/tabler-icons" target="_blank">Tabler Icons
+                  - MIT License</a></li>
+              <li class="list-group-item"><a href="https://github.com/mdbassit/Coloris" target="_blank">Momo Bassit's
+                  Coloris - MIT License</a></li>
+              <li class="list-group-item"><a href="https://github.com/openai/whisper" target="_blank">OpenAI's Whisper -
+                  MIT License</a></li>
+              <li class="list-group-item"><a href="https://people.csail.mit.edu/hubert/pyaudio/" target="_blank">Hubert
+                  Pham's PyAudio - MIT License</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
