refactor: separate version string from html
The version string is now pulled from the VERSION file into html using flask. All version number changes should occur inside the file.

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -517,7 +517,7 @@
                   </li>
                   <li class="list-inline-item">
                     <label>
-                      v1.0.0-rc
+                      {{version}}
                     </label>
                   </li>
                   <li class="list-inline-item">
