feat: added websocket disconnect notice on subs.html
Also changed to sample text on the subs.html during startup

--- a/templates/subs.html
+++ b/templates/subs.html
@@ -8,7 +8,8 @@
 
 <body>
     <div class="flex-container center">
-        <p id="subs">This is where the inference results should go.<br>瓠瓜四（β Del/海豚座β），英文名Rotanev，是一個位於海豚座的雙星。它是海豚座的最亮星。
+        <p id="subs">
+            &lt; All inference results should appear here.<br>Please visit the control panel to start Whisper. &gt;
         </p>
     </div>
 </body>
