add tabs to the settings panel

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -645,8 +645,25 @@
             <h5 class="modal-title">Settings</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
-          <div class="modal-body">
-
+          <div class="modal-body" style="padding: 12px;">
+            <div class="card">
+              <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs nav-fill" data-bs-toggle="tabs" role="tablist">
+                  <li class="nav-item" role="presentation">
+                    <a href="#tabs-general" class="nav-link active" data-bs-toggle="tab" aria-selected="true"
+                      role="tab">General</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <div class="tab-content">
+                  <div class="tab-pane active show" id="tabs-general" role="tabpanel">
+                    <h4>General</h4>
+                    <div></div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
             <a href="#" class="btn btn-primary ms-auto" data-bs-dismiss="modal">
