complete prune models button implementation

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -571,6 +571,17 @@
       </div>
     </div>
     <div class="toast-container position-fixed bottom-0 end-0 p-3">
+      <div class="toast text-white bg-success border-0" role="alert" id="toast_prunedModels" aria-live="assertive"
+        aria-atomic="true">
+        <div class="toast-header text-white bg-success border-0">
+          <strong class="me-auto">Success!</strong>
+          <button type="button" class="me-0 btn-close btn-close-white" data-bs-dismiss="toast"
+            aria-label="Close"></button>
+        </div>
+        <div class=" toast-body">
+          All models pruned.
+        </div>
+      </div>
       <div class="toast text-white bg-warning border-0" role="alert" id="toast_whisperStillRunning"
         aria-live="assertive" aria-atomic="true" data-bs-autohide="false">
         <div class="toast-header text-white bg-warning border-0">
@@ -658,8 +669,22 @@
               <div class="card-body">
                 <div class="tab-content">
                   <div class="tab-pane active show" id="tabs-general" role="tabpanel">
-                    <h4>General</h4>
-                    <div></div>
+                    <div>
+                      <h5>Prune all models</h5>
+                      <button id="settingPanel_PruneAllModal" type="button" class="btn btn-danger">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24"
+                          height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
+                          stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                          <path d="M4 7l16 0" />
+                          <path d="M10 11l0 6" />
+                          <path d="M14 11l0 6" />
+                          <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
+                          <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
+                        </svg>
+                        Prune all models
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
