--- a/static/css/subs.css
+++ b/static/css/subs.css
@@ -10,6 +10,7 @@
 p {
     --stroke-color: rgb(187, 41, 143);
     --stroke-width: 4px;
+    position: absolute;
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
