--- a/templates/subs.html
+++ b/templates/subs.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <div class="flex-container center">
-        <p id="subs">
+    <div id="subs" class="flex-container center subs">
+        <p>
             &lt; All inference results should appear here.<br>Please visit the control panel to start Whisper. &gt;
         </p>
     </div>
