--- a/templates/subs.html
+++ b/templates/subs.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="subs" class="flex-container center subs">
-        <p>
+        <p id="startupNotice">
             &lt; All inference results should appear here.<br>Please visit the control panel to start Whisper. &gt;
         </p>
     </div>
