--- a/templates/empty.html
+++ b/templates/empty.html
@@ -500,6 +500,42 @@
                             min="0" />
                         </div>
                       </div>
+                      <hr style="margin: 14px;">
+                      <div class="row align-items-center">
+                        <div class="col">
+                          <label class="form-label">Logs Animation</label>
+                          <label class="form-check">
+                            <input id="SubtitleSettings_LogsAnimationEnable" class="form-check-input" type="checkbox">
+                            <span class="form-check-label">Enable</span>
+                          </label>
+                        </div>
+                        <div class="col">
+                          <div class="row">
+                            <div class="col-2">
+                              <label class="form-label">Logs Length</label>
+                            </div>
+                            <div class="col-1">
+                              <svg xmlns="http://www.w3.org/2000/svg" id="SubtitleSettings_LogsLengthWarningIcon"
+                                class="icon icon-tabler icon-tabler-alert-triangle" width="24" height="24"
+                                viewBox="0 0 24 24" stroke-width="2" stroke="orange" fill="none" stroke-linecap="round"
+                                stroke-linejoin="round" visibility="hidden">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                <path d="M12 9v4" />
+                                <path
+                                  d="M10.363 3.591l-8.106 13.534a1.914 1.914 0 0 0 1.636 2.871h16.214a1.914 1.914 0 0 0 1.636 -2.87l-8.106 -13.536a1.914 1.914 0 0 0 -3.274 0z" />
+                                <path d="M12 16h.01" />
+                              </svg>
+                            </div>
+                            <div class="col">
+                              <label id="SubtitleSettings_LogsLengthWarningText" class="form-label"
+                                style="color: orange;" hidden>This value exceeded the intended range (1-9). Falling
+                                back to 1.</label>
+                            </div>
+                          </div>
+                          <input type="number" class="form-control" id="SubtitleSettings_LogsLength" value="1" min="1"
+                            max="9" />
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
